reduced large heap allocations when allocateDirect=true