@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>tech.bitey</groupId>
 		<artifactId>dataframe-parent</artifactId>
-		<version>1.1.3</version>
+		<version>1.1.4</version>
 	</parent>
 
 	<artifactId>dataframe-test</artifactId>
@@ -25,12 +25,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M5</version>
 				<configuration>
-					<argLine>
-						--add-exports
-						org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
-						--add-exports
-						org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
-					</argLine>
+					<useModulePath>false</useModulePath>
 				</configuration>
 			</plugin>
 		</plugins>
